Major refactoring
Created services to separate logic
- SqlRideService - manages rides through sql database
- ValidationService - validates models

Created models to ensure type safety
- ApiError - response of an api when an error occurs
- Paged<T> - represents a paged object
- RideEntity - a ride object as an entity
- Ride - the ride object

Testing
- Added test for each service
- Tests are made independent
- Added test dev dependencies
	- Chai - for pretty assertions
	- Sinon - for stubbing

Documentation
- Updated to reflect new changes
- Added example response/request models

Others
- Callback functions are converted to async/await
- API errors now return appropriate HTTP error codes instead of 200.
    - 400 for validation errors
    - 404 for not found errors

Note: Breaking changes on API responses
