# src/models/api-error.ts
@@ -1,0 +1,7 @@
+/**
+ * Response of an API when an error occurs
+ */
+export interface ApiError {
+    errorCode: string,
+    messages: string[],
+}
